# ballast-digest

./: Cargo.toml  README.md
fixtures/: events_full.jsonl  survey_full.json  trend_empty.json  trend_full.json
src/: lib.rs  main.rs
tests/: digest_tests.rs
