[package]
name = "ballast-digest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ballast-digest"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
